MCA App/Release/MCA Dev Org/src/objects/Processor_Integration__c.object
<CustomObject>
    <fields>
        <fullName>From_Addresses__c</fullName>
        <label>From Addresses</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Processor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Processor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Processors Integration</relationshipLabel>
        <relationshipName>Processors_Integration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Number__c</fullName>
        <displayFormat>PI-{00000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </fields>
    <label>Processor Integration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Processor__c</columns>
        <columns>From_Addresses__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Processor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Processors Integration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>